--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Push Notification</h1>
 <p>This page must be accessed using HTTPS or via localhost.</p>
+<button disabled>Subscribe</button>
 <script src="js/main.js"></script>
 </body>
 </html>
